@@ -51,6 +51,7 @@
     * Improved debug logging of ldap syncs (Now writing duration of queries to log)
     * Displaying date/time of comments in comment icon hover menu (Please
       note: You need to update your livestatus to current version to make this work)
+    * FIX: Making "action" context link unclickable during handling actions / confirms
 
     BI:
     * Use Ajax to delay rendering of invisible parts of the tree (this
